llabdocs-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: llabdocs-service
  namespace: backend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: llabdocs
