llabdocs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-llabdocs
  namespace: backend
  annotations:
     cert-manager.io/issuer: letsencrypt-nginx
     nginx.ingress.kubernetes.io/configuration-snippet: |
        set $is_valid "0";
      
        if ($http_x_api_key = "#secret&Key*123&") {
            set $is_valid "1";
        }
      
        if ($http_x_rapidapi_proxy_secret = "d5c880d0-daf3-11ef-bd9f-3190f27d3706") {
            set $is_valid "1";
        }
      
        if ($is_valid = "0") {
            return 401;
        }
spec:
  tls:
   - hosts:
     - docs.lichbalab.services
     secretName: letsencrypt-nginx-llabdocs
  ingressClassName: nginx
  rules:
    - host: docs.lichbalab.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llabdocs-service
                port:
                  number: 8080
